# T1941_Deepak_Exam_cpp

./: README.md  T1941_Deepak_prompt_file.docx
Refractor_code_Task2/: task2.cpp
fleet-management/: CMakeLists.txt  CMakeLists.txt (modify)  README.md
fleet-management/data/: vehicles.csv
fleet-management/src/: FleetManager.cpp  FleetManager.h  Vehicle.cpp  Vehicle.h  main.cpp
fleet-management/src/tests/: FleetTests.cpp
